# Thinger-Wappsto-Translator

TCP_Server/: CMakeLists.txt
TCP_Server/src/: CMakeLists.txt  main.cpp  run
TCP_Server/src/thinger_core/: backendsocket.hpp  pson.h  thinger_controller.h  thinger_decoder.hpp  thinger_encoder.hpp  thinger_io.hpp  thinger_message.hpp  thinger_resource.hpp  thinger_server.h  wappsto_translator.hpp
TCP_Server/src/thinger_core/models/: peer.hpp  thinger_credentials.hpp  thinger_stream.hpp
qplus/: .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  generate_data.sh
qplus/buildroot/: Makefile
qplus/certs/: ca.crt  client.crt  client.key
qplus/cmake/Modules/: FindJSONCPP.cmake
qplus/src/: backendsocket.cpp  backendsocket.hpp  client.cpp  client.hpp  configuration.hpp  configuration.hpp.in  dataup.cpp  dataup.hpp  device.cpp  device.hpp  error.hpp  localsocket.cpp  localsocket.hpp  network.cpp  network.hpp  path.cpp  path.hpp  qplus.conf  root.cpp  root.hpp  serializer.cpp  serializer.hpp  sslclient.cpp  sslclient.hpp  state.cpp  state.hpp  status.cpp  status.hpp  url.hpp  util.cpp  util.hpp  value.cpp  value.hpp  ventilator.cpp  ventilator.hpp
qplus/src/variant/: variant.hpp
